# NLP_test

./: CMakeLists.txt  Dockerfile  README.md
cmake2/: FindqpOASES.cmake
demo/: CMakeLists.txt  ifopt_ipopt.cc  test_Formulation.cc  test_LPQP.cc  test_NLP.cc  test_ipopt.cc
demo/ifopt/: test_vars_constr_cost.h
include/hpp/foot/: BoxesHullTrajProblem.hh  TrajectoryProblem.hh
include/hpp/foot/functions/: BoxAboveFixedPlan.hh  BoxAbovePlan.hh  CostDistance.hh  FixedBoxPosition.hh  PlanBetweenBoxAndObstacle.hh
include/hpp/foot/solvers/: LPQPsolver.hh  QP.hh  QPBoxesFixed.hh  QPBoxesFixedIndividual.hh  QPPlanesFixed.hh
include/hpp/foot/solvers/NLP/: MyNLP.hh  NLP_constraint.hh  NLP_cost.hh  NLP_formulation.hh  NLP_variable.hh
include/hpp/foot/utils/: Box.hh  FixedPlan.hh  PlanForHull.hh  Printer.hh  ProblemConfig.hh  defs.hh
scripts/: viewSteps.py
src/: BoxesHullTrajProblem.cc  CMakeLists.txt  TrajectoryProblem.cc
src/functions/: BoxAboveFixedPlan.cc  BoxAbovePlan.cc  CostDistance.cc  FixedBoxPosition.cc  PlanBetweenBoxAndObstacle.cc
src/solvers/: LPQPsolver.cc  QP.cc  QPBoxesFixed.cc  QPBoxesFixedIndividual.cc  QPPlanesFixed.cc
src/solvers/NLP/: MyNLP.cc  NLP_constraint.cc  NLP_cost.cc  NLP_formulation.cc  NLP_variable.cc
src/utils/: Box.cc  Printer.cc  ProblemConfig.cc
